# Canal

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  README_CN.md  SECURITY.md  cliff.toml  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml  typos.toml
crates/canal-module/: Cargo.toml
crates/canal-module/src/: config.rs  health.rs  lib.rs
crates/canal-rpc/: Cargo.toml
crates/canal-rpc/src/: auth.rs  executor.rs  file_ops.rs  lib.rs  main.rs  protocol.rs
crates/devtools-core/: Cargo.toml
crates/devtools-core/src/: client.rs  config.rs  error.rs  filter.rs  lib.rs  service.rs  traits.rs  types.rs
crates/devtools-core/src/store/: langfuse.rs  memory.rs  mod.rs  postgres.rs
crates/devtools-core/tests/: langfuse_integration.rs
crates/gateway-api/: Cargo.toml  build.rs
crates/gateway-api/src/: crypto.rs  error.rs  main.rs  metrics.rs  remote_agent.rs  state.rs  websocket.rs
crates/gateway-api/src/execution/: k8s_strategy.rs  mod.rs
crates/gateway-api/src/middleware/: audit.rs  auth.rs  logging.rs  mod.rs  rate_limit.rs  rbac.rs  request_id.rs  supabase.rs
crates/gateway-api/src/routes/: account.rs  admin.rs  agent.rs  artifacts.rs  auth.rs  automation.rs  billing_v2.rs  cache.rs  chat.rs  code.rs  connectors.rs  console.rs  containers.rs  debug.rs  devtools.rs  filesystem.rs  gift_cards.rs  git.rs  graph.rs  health.rs  jobs.rs  learning.rs  mcp.rs  memory.rs  mod.rs  permissions.rs  plugins.rs  profiles.rs  prompts.rs  sessions.rs  settings.rs  sync.rs  tasks.rs  tools.rs  usage.rs  workflows.rs
crates/gateway-api/tests/: integration_api.rs
crates/gateway-cli/: Cargo.toml
crates/gateway-cli/src/: commands.rs  main.rs
crates/gateway-core/: Cargo.toml  build.rs
crates/gateway-core/benches/: agent_bench.rs  filesystem_bench.rs
crates/gateway-core/src/: error.rs  lib.rs
crates/gateway-core/src/agent/: config.rs  devtools_bridge.rs  enhanced_loop.rs  executor.rs  factory.rs  hybrid.rs  intent.rs  llm_adapter.rs  mod.rs  mode_selector.rs  planner.rs  roles.rs  step_delegate.rs  task_classifier.rs
crates/gateway-core/src/artifacts/: builder.rs  mod.rs  store.rs  types.rs
crates/gateway-core/src/billing/: gift_card.rs  mod.rs
crates/gateway-core/src/chat/: artifact.rs  artifact_extractor.rs  artifact_store.rs  engine.rs  message.rs  mod.rs  repository.rs  session.rs  streaming.rs  tool_use.rs
crates/gateway-core/src/collaboration/: approval.rs  clarification.rs  direct.rs  expert.rs  judge.rs  mod.rs  observer.rs  planner.rs  prd.rs  prd_approval.rs  quality.rs  registry.rs  state.rs  swarm.rs  templates.rs
crates/gateway-core/src/computer_use/: llm_adapter.rs  mod.rs  uitars_adapter.rs  uitars_parser.rs  uitars_provider.rs
crates/gateway-core/src/context/: manager.rs  mod.rs
crates/gateway-core/src/creative/: adapter.rs  api.rs  davinci.rs  finalcut.rs  mod.rs  premiere.rs  types.rs
crates/gateway-core/src/executor/: mod.rs  vm_strategy.rs
crates/gateway-core/src/filesystem/: mod.rs
crates/gateway-core/src/git/: mod.rs  operations.rs  repository.rs
crates/gateway-core/src/graph/: adapters.rs  budget.rs  builder.rs  checkpoint.rs  dag_scheduler.rs  devtools_observer.rs  edge.rs  error.rs  execution_store.rs  execution_store_observer.rs  executor.rs  memory_bridge.rs  mod.rs  node.rs  observer.rs  recording_observer.rs  streaming_observer.rs
crates/gateway-core/src/jobs/: config.rs  error.rs  hitl.rs  mod.rs  notification.rs  scheduler.rs  store.rs  types.rs
crates/gateway-core/src/learning/: collector.rs  distiller.rs  mod.rs  (+4 more)
crates/gateway-core/tests/: a22_integration.rs  a23_integration.rs  a27_mcp_integration.rs  a28_auth_tests.rs  a28_chat_sync_tests.rs  a28_observability_tests.rs  a28_plugin_security_tests.rs  a28_rate_limit_tests.rs  a28_rte_tests.rs  a28_security_tests.rs  agent_conversation.rs  agent_conversation_test.rs  agent_reliability.rs  agent_scalability.rs  agent_tool_orchestration.rs  browser_accessibility_integration.rs  browser_agent_integration.rs  browser_e2e.rs  browser_tool_loop_integration.rs  cloud_vm_e2e.rs  context_integration_test.rs  debug_orchestration_e2e.rs  integration_executor.rs  integration_filesystem.rs  local_codeact_e2e.rs  model_router_integration.rs  omniparser_tests.rs  orchestration_integration.rs  plan_approval_integration.rs  router_integration.rs  tool_system_integration.rs
crates/gateway-llm/: Cargo.toml
crates/gateway-llm/src/: cost_tracker.rs  error.rs  health.rs  lib.rs  model_profile.rs  model_registry.rs  router.rs  routing_engine.rs
crates/gateway-mcp-server/: Cargo.toml
crates/gateway-mcp-server/src/: catalog.rs  dispatcher.rs  lib.rs  main.rs  protocol.rs
crates/gateway-mcp-server/tests/: integration.rs
crates/gateway-memory/: Cargo.toml
crates/gateway-memory/src/: error.rs  lib.rs  persistence.rs  unified.rs
crates/gateway-plugins/: Cargo.toml
crates/gateway-plugins/src/: lib.rs
crates/gateway-service-traits/: Cargo.toml
crates/gateway-service-traits/src/: error.rs  lib.rs  llm.rs  memory.rs  tools.rs  trace.rs
crates/gateway-task-worker/: Cargo.toml
crates/gateway-task-worker/src/: file_ops.rs  grpc_server.rs  main.rs
crates/gateway-tool-types/: Cargo.toml
crates/gateway-tool-types/src/: context.rs  error.rs  filter.rs  lib.rs  traits.rs
crates/gateway-tools/: Cargo.toml
crates/gateway-tools/src/: error.rs  lib.rs
engine/canal-cv/: Cargo.toml
engine/canal-cv/src/: action_chain.rs  box_detector.rs  change_detector.rs  cv_experience_adapter.rs  lib.rs  llm_client.rs  molmo_detect.rs  molmo_parser.rs  molmo_provider.rs  monitor_events.rs  observation_narrator.rs  omniparser_detector.rs  phash.rs  pipeline.rs  screen_controller.rs  screen_monitor.rs  types.rs  vision_detector.rs  vision_pipeline.rs  workflow_recorder.rs  workflow_replayer.rs  workflow_store.rs  workflow_template.rs
engine/devtools-server/: Cargo.toml
engine/devtools-server/src/: auth.rs  error.rs  lib.rs  main.rs  routes.rs  state.rs
engine/devtools-server/tests/: api_tests.rs
(+461 files in other folders)
