[package]
name = "canal-module"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Module trait and shared context for Canal composable architecture"

[dependencies]
axum = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
