[package]
name = "devtools-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standalone LLM observability engine for Canal — Langfuse-style Trace/Span/Generation/Event data model"

[features]
default = []
client = ["dep:reqwest"]
langfuse = ["dep:reqwest", "dep:base64"]
postgres = ["dep:sqlx"]

[dependencies]
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
dashmap = "6"
thiserror.workspace = true
tracing.workspace = true
tokio-stream.workspace = true
futures.workspace = true

# Optional: HTTP client for remote ingest / Langfuse export
reqwest = { workspace = true, optional = true }
base64 = { version = "0.22", optional = true }
sqlx = { workspace = true, optional = true }

[dev-dependencies]
tokio-test.workspace = true
base64 = "0.22"
axum.workspace = true
