[package]
name = "gateway-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI Gateway HTTP API server"

[[bin]]
name = "gateway-api"
path = "src/main.rs"

[features]
default = []
omniparser = ["gateway-core/omniparser", "dep:image"]
graph = ["gateway-core/graph"]
collaboration = ["gateway-core/collaboration"]
orchestration = ["gateway-core/orchestration"]
multimodal = ["gateway-core/multimodal"]
cache = ["gateway-core/cache"]
learning = ["gateway-core/learning", "gateway-core/graph"]
intelligence = ["multimodal", "cache", "learning"]
jobs = ["gateway-core/jobs", "graph", "collaboration"]
billing = [] # TODO: billing-core not included in open-source release
database = ["gateway-core/database"]
full-orchestration = ["orchestration", "collaboration", "intelligence", "graph", "prompt-constraints", "context-engineering", "billing", "jobs", "devtools", "database"]
prompt-constraints = ["gateway-core/prompt-constraints"]
context-engineering = ["gateway-core/context-engineering"]
devtools = ["gateway-core/devtools", "dep:devtools-core", "devtools-core/postgres"]
langfuse = ["devtools", "gateway-core/langfuse", "devtools-core/langfuse"]

[dependencies]
gateway-core = { path = "../gateway-core" }
gateway-service-traits = { path = "../gateway-service-traits" }
gateway-tools.workspace = true
canal-proto = { path = "../canal-proto" }
devtools-core = { path = "../devtools-core", optional = true }

async-trait.workspace = true
tokio.workspace = true
axum = { workspace = true, features = ["ws"] }
tonic = "0.12"
prost = "0.13"
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sqlx.workspace = true
config.workspace = true
dotenvy.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
futures.workspace = true
tokio-stream.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
dirs = "5"
bcrypt.workspace = true
jsonwebtoken.workspace = true
totp-rs.workspace = true
sha2 = "0.10.9"
aes-gcm = "0.10"
reqwest.workspace = true
tokio-tungstenite.workspace = true
urlencoding = "2"

base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"], optional = true }

[dev-dependencies]
tokio-test.workspace = true
axum-test = "18"
tempfile = "3.14"
tower = { workspace = true, features = ["util"] }
