[package]
name = "gateway-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM routing, provider abstraction, model profiles, health tracking, cost tracking, and routing strategies"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true
futures.workspace = true
async-stream = "0.3"
bytes = "1.5"

[dev-dependencies]
tokio-test.workspace = true
tempfile = "3"
