[package]
name = "gateway-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Unified memory storage, semantic caching, plan caching, and embedding support"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true
dashmap = "6"
sha2 = "0.10"

[dev-dependencies]
tokio-test.workspace = true
tempfile = "3"
