[package]
name = "gateway-service-traits"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Service boundary traits for dual-mode deployment (monolith / distributed)"

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
gateway-llm = { path = "../gateway-llm" }
