[package]
name = "gateway-task-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Task worker binary that runs in isolated Kubernetes pods"

[[bin]]
name = "task-worker"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true
tokio-stream.workspace = true

# Streaming support
async-stream = "0.3"
bytes = "1.5"

# gRPC server
tonic = "0.12"
prost = "0.13"
canal-proto = { path = "../canal-proto" }

# Process execution
tokio-process = "0.2"
pty-process = { version = "0.4", optional = true }

# File operations
walkdir = "2"
glob = "0.3"
regex = "1"

# Git operations
git2 = { version = "0.19", optional = true }

[features]
default = ["grpc"]
grpc = []
git = ["git2"]
pty = ["pty-process"]

[dev-dependencies]
tokio-test.workspace = true
tempfile = "3"
