[package]
name = "canal-cv"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Computer vision engine for screen automation — detection, narration, pipelines"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
async-trait.workspace = true
uuid.workspace = true
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
regex = "1.10"

[dev-dependencies]
tokio-test.workspace = true
